fixes in styles for dark mode

--- a/BookQuoteUI/src/styles.scss
+++ b/BookQuoteUI/src/styles.scss
@@ -57,21 +57,15 @@ body.dark-mode .btn-outline-dark {
   border-color: #ffffff;
 }
 
-
 body.dark-mode .add-new-item-form {
   background-color: #000000f8;
   color: #ffffff;
 }
 
-// body.dark-mode .add-new-item-form  input {
-//   background-color: #f3060686;
-//   color: #ffffff;
-// }
 body.dark-mode .add-new-item-form .form-control, .form-select {
   background-color: #cccccc86;
   color: #ffffff;
 }
-
 
 .card {
   background-color: rgba(255, 255, 255, 0.314);
@@ -89,6 +83,8 @@ body.dark-mode .card {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.559) 0px 3px 12px;
 }
+ .card-subtitle {
+  color: #ffffff;   }
 
 body.dark-mode .btn-secondary {
   background-color: #000000;
@@ -97,7 +93,6 @@ body.dark-mode .btn-secondary {
 }
 .container-scroll{
   overflow-y: scroll; 
-  // height:35rem;
   height: 80vh;
 }
 
